--- a/docs/dist.css
+++ b/docs/dist.css
@@ -1,4 +1,3 @@
-
 body {
   margin: 0;
   font-family: sans-serif;
@@ -8,81 +7,7 @@ body {
 }
 
 main {
-  max-width: 1200px;
   margin: auto;
-  padding: 1rem;
-  background: #fff;
-  color: #111;
-}
-
-/* desert scheme ported from vim to google prettify */
-pre.prettyprint {
-  display: block;
-  background-color: #333;
-  overflow: auto;
-  font-size: 16px;
-}
-
-pre .nocode {
-  background-color: none;
-  color: #000;
-} /* no-code          - black        */
-
-pre .str {
-  color: #ffa0a0;
-} /* string           - pink         */
-
-pre .kwd {
-  color: #f0e68c;
-  font-weight: bold;
-} /* keyword         - lightyellow   */
-
-pre .com {
-  color: #87ceeb;
-} /* comment         - skyblue       */
-
-pre .typ {
-  color: #98fb98;
-} /* type            - lightgreen    */
-
-pre .lit {
-  color: #cd5c5c;
-} /* literal         - darkred       */
-
-pre .pun {
-  color: #fff;
-} /* punctuation      - white        */
-
-pre .pln {
-  color: #fff;
-} /* plaintext        - white        */
-
-pre .tag {
-  color: #f0e68c;
-  font-weight: bold;
-} /* html/xml tag     - lightyellow  */
-
-pre .atn {
-  color: #bdb76b;
-  font-weight: bold;
-} /* attribute name   - khaki        */
-
-pre .atv {
-  color: #ffa0a0;
-} /* attribute value  - pink          */
-
-pre .dec {
-  color: #98fb98;
-} /* decimal          - lightgreen    */
-
-ol.linenums {
-  margin-top: 0;
-  margin-bottom: 0;
-  color: #aeaeae;
-} /* linenums         - lightgrey      */
-
-li.l0li.l1li.l2li.l3li.l5li.l6li.l7li.l8 {
-  list-style-type: none;
 }
 
 *,
@@ -90,20 +15,23 @@ li.l0li.l1li.l2li.l3li.l5li.l6li.l7li.l8 {
 *::after {
   box-sizing: border-box;
   -webkit-touch-callout: none;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent;
 }
 
-.glider {
+:root { /* stylelint-disable-line plugin/no-unsupported-browser-features */
+}
+
+.a {
   position: relative;
   width: 100%;
-  max-width: 900px;
-  height: 20em;
-  margin: 1rem auto;
-  background: #fff;
-  color: #111;
+  max-width: 100vw;
+  height: 50vw;
+  margin: auto;
+  background: var(--theme-bg);
+  color: var(--theme-color);
 }
 
-.slides {
+.b {
   overflow: hidden;
   position: absolute;
   top: 0;
@@ -113,7 +41,7 @@ li.l0li.l1li.l2li.l3li.l5li.l6li.l7li.l8 {
   z-index: 0;
 }
 
-.slide {
+.c {
   overflow: hidden;
   position: absolute;
   top: 0;
@@ -127,65 +55,88 @@ li.l0li.l1li.l2li.l3li.l5li.l6li.l7li.l8 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding: 1rem 3rem 2rem;
+  padding: 1rem 2rem 2rem;
   -webkit-transform: translate3d(100%, 0, 0);
           transform: translate3d(100%, 0, 0);
+  background-size: cover;
+  background-position: 50% 50%;
   z-index: 0;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
-          user-select: none;
-  background-size: cover;
-  background-position: 50% 50%
+          user-select: none
 }
 
-.slide.a {
-  -webkit-transform: translate3d(0%, 0, 0);
-          transform: translate3d(0%, 0, 0);
-  z-index: 1;
+.c.d {
+ -webkit-transform: translate3d(0%, 0, 0);
+         transform: translate3d(0%, 0, 0);
+ z-index: 1;
 }
 
-.slide.b,
-  .slide.c {
-  z-index: 2;
+.c.e {
+ z-index: 2;
+ -webkit-transform: translate3d(-100%, 0, 0);
+         transform: translate3d(-100%, 0, 0);
 }
 
-.slide.b {
-  -webkit-transform: translate3d(-100%, 0, 0);
-          transform: translate3d(-100%, 0, 0);
+.c.f {
+ z-index: 3;
+ -webkit-transform: translate3d(100%, 0, 0);
+         transform: translate3d(100%, 0, 0);
 }
 
-.slide.c {
-  -webkit-transform: translate3d(100%, 0, 0);
-          transform: translate3d(100%, 0, 0);
-}
-
-.ex2 .slide {
-}
-
-.ex2 .slide .b {
-  z-index: 1;
-}
-
-.ex2 .slide .a {
-  z-index: 2;
-}
-
-.ex2 .slide .c {
-  z-index: 3;
-}
-
-.pagers {
+.g {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   visibility: hidden;
-  z-index: 2;
+  z-index: 2
 }
 
-.dots {
+.g .h,
+  .g .f {
+ position: absolute;
+ top: 50%;
+ width: 1em;
+ height: 2em;
+ font-size: 2rem;
+ margin: 0 1rem;
+ -webkit-transform: translateY(-50%);
+         transform: translateY(-50%);
+ background: rgba(255, 255, 255, .5);
+ color: #000;
+ display: -webkit-box;
+ display: -ms-flexbox;
+ display: flex;
+ -webkit-box-align: center;
+     -ms-flex-align: center;
+         align-items: center;
+ -webkit-box-pack: center;
+     -ms-flex-pack: center;
+         justify-content: center;
+ visibility: visible;
+ cursor: pointer;
+ -webkit-user-select: none;
+    -moz-user-select: none;
+     -ms-user-select: none;
+         user-select: none;
+}
+
+.g .h:hover, .g .f:hover {
+ background: rgba(255, 255, 255, .9);
+}
+
+.g .h {
+ left: 0;
+}
+
+.g .f {
+ right: 0;
+}
+
+.i {
   position: absolute;
   left: 0;
   right: 0;
@@ -197,14 +148,14 @@ li.l0li.l1li.l2li.l3li.l5li.l6li.l7li.l8 {
       -ms-flex-pack: center;
           justify-content: center;
   z-index: 2;
-  background: rgba(0, 0, 0, .3);
-  pointer-events: none;
+  visibility: hidden;
 }
 
-.dot {
+.j {
   position: relative;
-  height: 2rem;
-  width: 2rem;
+  height: 3rem;
+  width: 3rem;
+  font-size: 1rem;
   margin: 0.25rem;
   visibility: visible;
   border-radius: 50%;
@@ -213,41 +164,7 @@ li.l0li.l1li.l2li.l3li.l5li.l6li.l7li.l8 {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  pointer-events: all
-}
-
-.dot::before {
-  content: '';
-  position: absolute;
-  top: 0.66667rem;
-  left: 0.66667rem;
-  right: 0.66667rem;
-  bottom: 0.66667rem;
-  border-radius: inherit;
-  background: rgba(255, 255, 255, .3);
-}
-
-.dot:hover {
-  background: rgba(0, 0, 0, .3);
-}
-
-.dot.d::before {
-  content: '';
-  background: rgba(255, 255, 255, .8);
-}
-
-.prev,
-.next {
-  position: absolute;
-  top: 50%;
-  width: 1em;
-  height: 2em;
-  font-size: 3rem;
-  margin: 0 1rem;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  background: rgba(0, 0, 0, .3);
-  color: #fff;
+  pointer-events: all;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -256,79 +173,67 @@ li.l0li.l1li.l2li.l3li.l5li.l6li.l7li.l8 {
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
-          justify-content: center;
-  visibility: visible;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none
+          justify-content: center
 }
 
-.prev:hover, .next:hover {
-  background: rgba(0, 0, 0, .8);
+.j::before {
+ content: '';
+ display: block;
+ height: 1em;
+ width: 1em;
+ border-radius: inherit;
+ background: rgba(255, 255, 255, .5);
 }
 
-.prev {
-  right: 100%
+.j:hover {
+ background: rgba(0, 0, 0, .3);
 }
 
-@media (max-width: 1100px) {
-
-  .prev {
-    right: auto;
-    left: 0;
-  }
-  }
-
-.next {
-  left: 100%
+.j.k::before {
+ content: '';
+ background: rgba(255, 255, 255, .9);
 }
 
-@media (max-width: 1100px) {
-
-  .next {
-    left: auto;
-    right: 0;
-  }
-  }
-
-.e .slide {
+.l {
   /* plugin loaded */
 }
 
-.f {
+.m {
   /* plugin initialized */
 }
 
-.jsHook {
+.n {
+  /* slides */
+}
+
+.o {
   /* slide */
 }
 
-.jsWrapper {
-  /* slide */
-}
-
-.jsDot {
+.p {
   /* dot */
 }
 
-.jsNext {
+.q {
   /* next */
 }
 
-.jsPrev {
+.r {
   /* prev */
 }
 
-.slide h2,
-.log {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  padding: 1rem;
-  margin: 1rem 3rem;
-  width: calc(100% - 3rem * 2);
-  background: rgba(255, 255, 255, .5);
-  color: #000;
+.s {
+  /* belt */
+}
+
+.t {
+  /* left */
+}
+
+.u {
+  /* right */
+}
+
+.v {
+  /* left-right */
 }
