--- a/views/index.pug
+++ b/views/index.pug
@@ -2,11 +2,35 @@ extends _layout.pug
 include _mixins.pug
 
 block content
-  div(class=classNames(styles.glider, styles.parallax))
-    +pagers()
-    +dots(5)
-    +slides(5, 'nature_')
-      div(class=classNames(styles.cubes))
-        - let slices = 18
-        while slices--
-          div(class=classNames(styles.cube))
+  article
+    h2 Vertical blinds
+    div(class=classNames(styles.glider, styles.parallax))
+      +pagers()
+      +dots(5)
+      +slides(5, 'nature_')
+        div(class=classNames(styles.cubes))
+          - let slices = 18
+          while slices--
+            div(class=classNames(styles.cube))
+
+  article
+    h2 Horizontal blinds
+    div(class=classNames(styles.glider, styles.parallax))
+      +pagers()
+      +dots(5)
+      +slides(5, 'city_')
+        div(class=classNames(styles.cubes))
+          - let slices = 18
+          while slices--
+            div(class=classNames(styles.cube))
+
+  article
+    h2 Squares
+    div(class=classNames(styles.glider, styles.parallax))
+      +pagers()
+      +dots(5)
+      +slides(5, 'sea_')
+        div(class=classNames(styles.cubes))
+          - let slices = 18
+          while slices--
+            div(class=classNames(styles.cube))
