--- a/docs/dist.css
+++ b/docs/dist.css
@@ -1,27 +1,8 @@
-body {
-  margin: 0;
-  font-family: sans-serif;
-  min-width: 320px;
-  overflow-x: hidden;
-  overflow-y: auto;
-}
-
-main {
-  margin: auto;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  -webkit-touch-callout: none;
-  -webkit-tap-highlight-color: transparent;
-}
 
 :root { /* stylelint-disable-line plugin/no-unsupported-browser-features */
 }
 
-.a {
+.x {
   position: relative;
   width: 100%;
   max-width: 100vw;
@@ -31,7 +12,7 @@ main {
   color: var(--theme-color);
 }
 
-.b {
+.y {
   overflow: hidden;
   position: absolute;
   top: 0;
@@ -41,7 +22,7 @@ main {
   z-index: 0;
 }
 
-.c {
+.z {
   overflow: hidden;
   position: absolute;
   top: 0;
@@ -67,25 +48,25 @@ main {
           user-select: none
 }
 
-.c.d {
+.z.A {
  -webkit-transform: translate3d(0%, 0, 0);
          transform: translate3d(0%, 0, 0);
  z-index: 1;
 }
 
-.c.e {
+.z.B {
  z-index: 2;
  -webkit-transform: translate3d(-100%, 0, 0);
          transform: translate3d(-100%, 0, 0);
 }
 
-.c.f {
+.z.C {
  z-index: 3;
  -webkit-transform: translate3d(100%, 0, 0);
          transform: translate3d(100%, 0, 0);
 }
 
-.g {
+.D {
   position: absolute;
   top: 0;
   left: 0;
@@ -95,8 +76,8 @@ main {
   z-index: 2
 }
 
-.g .h,
-  .g .f {
+.D .E,
+  .D .C {
  position: absolute;
  top: 50%;
  width: 1em;
@@ -124,19 +105,19 @@ main {
          user-select: none;
 }
 
-.g .h:hover, .g .f:hover {
+.D .E:hover, .D .C:hover {
  background: rgba(255, 255, 255, .9);
 }
 
-.g .h {
+.D .E {
  left: 0;
 }
 
-.g .f {
+.D .C {
  right: 0;
 }
 
-.i {
+.F {
   position: absolute;
   left: 0;
   right: 0;
@@ -151,7 +132,7 @@ main {
   visibility: hidden;
 }
 
-.j {
+.G {
   position: relative;
   height: 3rem;
   width: 3rem;
@@ -176,7 +157,7 @@ main {
           justify-content: center
 }
 
-.j::before {
+.G::before {
  content: '';
  display: block;
  height: 1em;
@@ -185,55 +166,74 @@ main {
  background: rgba(255, 255, 255, .5);
 }
 
-.j:hover {
+.G:hover {
  background: rgba(0, 0, 0, .3);
 }
 
-.j.k::before {
+.G.H::before {
  content: '';
  background: rgba(255, 255, 255, .9);
 }
 
-.l {
+.I {
   /* plugin loaded */
 }
 
-.m {
+.J {
   /* plugin initialized */
 }
 
-.n {
+.K {
   /* slides */
 }
 
-.o {
+.L {
   /* slide */
 }
 
-.p {
+.M {
   /* dot */
 }
 
-.q {
+.N {
   /* next */
 }
 
-.r {
+.O {
   /* prev */
 }
 
-.s {
+.P {
   /* belt */
 }
 
-.t {
+.Q {
   /* left */
 }
 
-.u {
+.R {
   /* right */
 }
 
-.v {
+.S {
   /* left-right */
+}
+body {
+  margin: 0;
+  font-family: sans-serif;
+  min-width: 320px;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+main {
+  margin: auto;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
 }
