--- a/docs/dist.css
+++ b/docs/dist.css
@@ -21,7 +21,7 @@ main {
 :root { /* stylelint-disable-line plugin/no-unsupported-browser-features */
 }
 
-.x {
+.a {
   position: relative;
   width: 100%;
   max-width: 100vw;
@@ -31,7 +31,7 @@ main {
   color: var(--theme-color);
 }
 
-.y {
+.b {
   overflow: hidden;
   position: absolute;
   top: 0;
@@ -41,7 +41,7 @@ main {
   z-index: 0;
 }
 
-.z {
+.c {
   overflow: hidden;
   position: absolute;
   top: 0;
@@ -67,25 +67,25 @@ main {
           user-select: none
 }
 
-.z.A {
+.c.d {
  -webkit-transform: translate3d(0%, 0, 0);
          transform: translate3d(0%, 0, 0);
  z-index: 1;
 }
 
-.z.B {
+.c.e {
  z-index: 2;
  -webkit-transform: translate3d(-100%, 0, 0);
          transform: translate3d(-100%, 0, 0);
 }
 
-.z.C {
+.c.f {
  z-index: 3;
  -webkit-transform: translate3d(100%, 0, 0);
          transform: translate3d(100%, 0, 0);
 }
 
-.D {
+.g {
   position: absolute;
   top: 0;
   left: 0;
@@ -95,8 +95,8 @@ main {
   z-index: 2
 }
 
-.D .E,
-  .D .C {
+.g .h,
+  .g .f {
  position: absolute;
  top: 50%;
  width: 1em;
@@ -124,19 +124,19 @@ main {
          user-select: none;
 }
 
-.D .E:hover, .D .C:hover {
+.g .h:hover, .g .f:hover {
  background: rgba(255, 255, 255, .9);
 }
 
-.D .E {
+.g .h {
  left: 0;
 }
 
-.D .C {
+.g .f {
  right: 0;
 }
 
-.F {
+.i {
   position: absolute;
   left: 0;
   right: 0;
@@ -151,7 +151,7 @@ main {
   visibility: hidden;
 }
 
-.G {
+.j {
   position: relative;
   height: 3rem;
   width: 3rem;
@@ -176,7 +176,7 @@ main {
           justify-content: center
 }
 
-.G::before {
+.j::before {
  content: '';
  display: block;
  height: 1em;
@@ -185,55 +185,55 @@ main {
  background: rgba(255, 255, 255, .5);
 }
 
-.G:hover {
+.j:hover {
  background: rgba(0, 0, 0, .3);
 }
 
-.G.H::before {
+.j.k::before {
  content: '';
  background: rgba(255, 255, 255, .9);
 }
 
-.I {
+.l {
   /* plugin loaded */
 }
 
-.J {
+.m {
   /* plugin initialized */
 }
 
-.K {
+.n {
   /* slides */
 }
 
-.L {
+.o {
   /* slide */
 }
 
-.M {
+.p {
   /* dot */
 }
 
-.N {
+.q {
   /* next */
 }
 
-.O {
+.r {
   /* prev */
 }
 
-.P {
+.s {
   /* belt */
 }
 
-.Q {
+.t {
   /* left */
 }
 
-.R {
+.u {
   /* right */
 }
 
-.S {
+.v {
   /* left-right */
 }
