--- a/docs/presets.css
+++ b/docs/presets.css
@@ -21,7 +21,7 @@ main {
 :root { /* stylelint-disable-line plugin/no-unsupported-browser-features */
 }
 
-.w {
+.T {
   position: relative;
   width: 100%;
   max-width: 100vw;
@@ -31,7 +31,7 @@ main {
   color: var(--theme-color);
 }
 
-.x {
+.U {
   overflow: hidden;
   position: absolute;
   top: 0;
@@ -41,7 +41,7 @@ main {
   z-index: 0;
 }
 
-.y {
+.V {
   overflow: hidden;
   position: absolute;
   top: 0;
@@ -58,33 +58,34 @@ main {
   padding: 1rem 2rem 2rem;
   -webkit-transform: translate3d(100%, 0, 0);
           transform: translate3d(100%, 0, 0);
+  background-size: cover;
+  background-position: 50% 50%;
   z-index: 0;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
-          user-select: none;
-  visibility: hidden
+          user-select: none
 }
 
-.y.z {
+.V.W {
  -webkit-transform: translate3d(0%, 0, 0);
          transform: translate3d(0%, 0, 0);
  z-index: 1;
 }
 
-.y.A {
+.V.X {
  z-index: 2;
  -webkit-transform: translate3d(-100%, 0, 0);
          transform: translate3d(-100%, 0, 0);
 }
 
-.y.B {
+.V.Y {
  z-index: 3;
  -webkit-transform: translate3d(100%, 0, 0);
          transform: translate3d(100%, 0, 0);
 }
 
-.C {
+.Z {
   position: absolute;
   top: 0;
   left: 0;
@@ -94,8 +95,8 @@ main {
   z-index: 2
 }
 
-.C .D,
-  .C .B {
+.Z .aa,
+  .Z .Y {
  position: absolute;
  top: 50%;
  width: 1em;
@@ -123,19 +124,19 @@ main {
          user-select: none;
 }
 
-.C .D:hover, .C .B:hover {
+.Z .aa:hover, .Z .Y:hover {
  background: rgba(255, 255, 255, .9);
 }
 
-.C .D {
+.Z .aa {
  left: 0;
 }
 
-.C .B {
+.Z .Y {
  right: 0;
 }
 
-.E {
+.ab {
   position: absolute;
   left: 0;
   right: 0;
@@ -150,7 +151,7 @@ main {
   visibility: hidden;
 }
 
-.F {
+.ac {
   position: relative;
   height: 3rem;
   width: 3rem;
@@ -175,7 +176,7 @@ main {
           justify-content: center
 }
 
-.F::before {
+.ac::before {
  content: '';
  display: block;
  height: 1em;
@@ -184,206 +185,55 @@ main {
  background: rgba(255, 255, 255, .5);
 }
 
-.F:hover {
+.ac:hover {
  background: rgba(0, 0, 0, .3);
 }
 
-.F.G::before {
+.ac.ad::before {
  content: '';
  background: rgba(255, 255, 255, .9);
 }
 
-.H {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background: inherit;
-  visibility: hidden;
-}
-
-.I {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  background: inherit;
-  visibility: visible;
-  background-size: 100vw auto;
-  background-position: 0 var(--position-y);
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden
-}
-
-.I:nth-child(2) {
- background-position: -10vw var(--position-y);
-}
-
-.I:nth-child(3) {
- background-position: -20vw var(--position-y);
-}
-
-.I:nth-child(4) {
- background-position: -30vw var(--position-y);
-}
-
-.I:nth-child(5) {
- background-position: -40vw var(--position-y);
-}
-
-.I:nth-child(6) {
- background-position: -50vw var(--position-y);
-}
-
-.I:nth-child(7) {
- background-position: -60vw var(--position-y);
-}
-
-.I:nth-child(8) {
- background-position: -70vw var(--position-y);
-}
-
-.I:nth-child(9) {
- background-position: -80vw var(--position-y);
-}
-
-.I:nth-child(10) {
- background-position: -90vw var(--position-y);
-}
-
-.J {
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.K {
-  --position-x: 0;
-  --position-y: 0;
-  --factor: 6;
-  --step: calc(100vw / var(--factor) * -1);
-
-  -webkit-box-flex: 1;
-
-      -ms-flex: 1 1 calc(100% / var(--factor));
-
-          flex: 1 1 calc(100% / var(--factor));
-  background: inherit;
-  visibility: visible;
-  background-size: 100vw auto;
-  background-position: var(--position-x) var(--position-y);
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden
-}
-
-.K:nth-child(2) {
- --position-x: calc(var(--step) * 1);
-}
-
-.K:nth-child(3) {
- --position-x: calc(var(--step) * 2);
-}
-
-.K:nth-child(4) {
- --position-x: calc(var(--step) * 3);
-}
-
-.K:nth-child(5) {
- --position-x: calc(var(--step) * 4);
-}
-
-.K:nth-child(6) {
- --position-x: calc(var(--step) * 5);
-}
-
-.K:nth-child(7) {
- --position-y: calc(var(--step) * 1);
-}
-
-.K:nth-child(8) {
- --position-x: calc(var(--step) * 1);
- --position-y: calc(var(--step) * 1);
-}
-
-.K:nth-child(9) {
- --position-x: calc(var(--step) * 2);
- --position-y: calc(var(--step) * 1);
-}
-
-.K:nth-child(10) {
- --position-x: calc(var(--step) * 3);
- --position-y: calc(var(--step) * 1);
-}
-
-.K:nth-child(11) {
- --position-x: calc(var(--step) * 4);
- --position-y: calc(var(--step) * 1);
-}
-
-.K:nth-child(12) {
- --position-x: calc(var(--step) * 5);
- --position-y: calc(var(--step) * 1);
-}
-
-.K:nth-child(13) {
- --position-y: calc(var(--step) * 2);
-}
-
-.K:nth-child(14) {
- --position-x: calc(var(--step) * 1);
- --position-y: calc(var(--step) * 2);
-}
-
-.K:nth-child(15) {
- --position-x: calc(var(--step) * 2);
- --position-y: calc(var(--step) * 2);
-}
-
-.K:nth-child(16) {
- --position-x: calc(var(--step) * 3);
- --position-y: calc(var(--step) * 2);
-}
-
-.K:nth-child(17) {
- --position-x: calc(var(--step) * 4);
- --position-y: calc(var(--step) * 2);
-}
-
-.K:nth-child(18) {
- --position-x: calc(var(--step) * 5);
- --position-y: calc(var(--step) * 2);
-}
-
-.L {
+.ae {
   /* plugin loaded */
 }
 
-.M {
+.af {
   /* plugin initialized */
 }
 
-.N {
+.ag {
   /* slides */
 }
 
-.O {
+.ah {
   /* slide */
 }
 
-.P {
+.ai {
   /* dot */
 }
 
-.Q {
+.aj {
   /* next */
 }
 
-.R {
+.ak {
   /* prev */
 }
 
-.S {
-  /* parallax */
+.al {
+  /* belt */
+}
+
+.am {
+  /* left */
+}
+
+.an {
+  /* right */
+}
+
+.ao {
+  /* left-right */
 }
