--- a/views/visible-slides.pug
+++ b/views/visible-slides.pug
@@ -5,19 +5,25 @@ include _mixins.pug
 block content
 
   article
-    h2 2 Visible slides (slideBy 1)
+    h2 Belt: 2 Visible slides (slideBy 1)
     div(class=classNames(styles.glider, styles.multi1))
       +pagers()
       +slides(5, 'nature_')
 
   article
-    h2 4 Visible slides (slideBy 4)
+    h2 Belt: 4 Visible slides (slideBy 4)
     div(class=classNames(styles.glider, styles.multi2))
+      +pagers()
+      +slides(10, 'underwater_')
+
+  article
+    h2 Cover: 5 Visible slides (slideBy 2)
+    div(class=classNames(styles.glider, styles.multi3))
       +pagers()
       +slides(10, 'city_')
 
   article
-    h2 3 Visible slides (slideBy 2)
-    div(class=classNames(styles.glider, styles.multi3))
+    h2 Cover: 3 Visible slides (slideBy 3)
+    div(class=classNames(styles.glider, styles.multi4))
       +pagers()
       +slides(7, 'sea_')
